tests/ui/unsized/issue-115809.stderr
error[E0161]: cannot move a value of type `[i32]`
  --> $DIR/issue-115809.rs:5:12
   |
LL |     match [a[..]] {
   |            ^^^^^ the size of `[i32]` cannot be statically determined

error[E0508]: cannot move out of type `[i32]`, a non-copy slice
  --> $DIR/issue-115809.rs:5:12
   |
LL |     match [a[..]] {
   |            ^^^^^
   |            |
   |            cannot move out of here
   |            move occurs because value has type `[i32]`, which does not implement the `Copy` trait

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0161, E0508.
For more information about an error, try `rustc --explain E0161`.
